infrastructure/controllers/middlewares.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: int-acl
  namespace: ingress-traefik
spec:
  ipAllowList:
    sourceRange:
      - ${proxyIP}/24
