infrastructure/controllers/reloader.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: infra-reloader
