infrastructure/controllers/traefik.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-traefik
  labels:
    pod-security.kubernetes.io/enforce: privileged
