infrastructure/controllers/ingress-nginx.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-nginx-nodeports
  namespace: ingress-nginx
  annotations:
    description: >
      Allows traffic from external to this namespace only from the internal net.
      This policy still allows access to other NodePort services not targeting
      the ingress-nginx pod.
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
  ingress:
    - fromCIDR:
      - ${proxyIP}/24
    - fromEndpoints:
      - matchLabels:
          io.kubernetes.pod.namespace: infra-observability
          app.kubernetes.io/name: prometheus
      toPorts:
      - ports:
        - port: '10254'
          protocol: TCP
        rules:
          http:
          - method: GET
            path: /metrics
