infrastructure/controllers/ingress-traefik.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-traefik
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-traefik-nodeports-for-proxy
  namespace: ingress-traefik
  annotations:
    description: >
      Allows traffic from external to this namespace only from the reverse proxy.
      This policy still allows access to other NodePort services not targeting
      the ingress-traefik pod (such as the whoami service for example).
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  ingress:
    - fromCIDR:
      - ${proxyIP}/32
    - fromEndpoints:
      - matchLabels:
          io.kubernetes.pod.namespace: infra-observability
          app.kubernetes.io/name: prometheus
      toPorts:
      - ports:
        - port: '9100'
          protocol: TCP
        rules:
          http:
          - method: GET
            path: /metrics
